#! /usr/bin/autoconf

##############################################################################
#
# This source is free software ; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation ; either version 2, or (at your option) any later version.
# Copyright (C) 1999-2005 Psycledelics http://psycle.pastnotecut.org : Johan Boule
#
# Process this file with autoconf to produce a configure script.
# \meta generic
# \meta standard posix
#
# Note:
# 	To create all the files needed by the configure script, call
# 	autoreconf --install --symlink, or
# 	./autogen.sh, or
# 	./autotools-bootstrap.
#
##############################################################################



########################################################################################################################################################################
########################################################################################################################################################################
########################################################################################################################################################################
########################################################################################################################################################################
# packageneric



m4_include(packageneric/generic/detail/autotools/autoconf/m4/packageneric.m4)
PACKAGENERIC__INCLUDE(packageneric/generic/detail/autotools/autoconf/autoconf.ac)
PACKAGENERIC__INCLUDE(packageneric/generic/detail/autotools/autoconf/recall.ac)
PACKAGENERIC__INCLUDE(packageneric/generic/detail/autotools/autoconf/dev-pack.ac)
PACKAGENERIC__INCLUDE(packageneric/generic/detail/autotools/autoconf/options.ac)
PACKAGENERIC__INCLUDE(packageneric/generic/detail/autotools/autoconf/paths.ac)
packageneric__echo auxiliary programs: packageneric/+autogenerated/autotools/auxiliary-programs
AC_CONFIG_AUX_DIR(packageneric/+autogenerated/autotools/auxiliary-programs)
PACKAGENERIC__INCLUDE(packageneric/generic/detail/autotools/autoconf/automake.ac)
PACKAGENERIC__INCLUDE(packageneric/generic/detail/autotools/autoconf/python.ac)
PACKAGENERIC__INCLUDE(packageneric/generic/detail/autotools/autoconf/c++.ac)
PACKAGENERIC__INCLUDE(packageneric/generic/detail/autotools/autoconf/libtool.ac)
PACKAGENERIC__INCLUDE(packageneric/generic/detail/autotools/autoconf/pkgconfig.ac)
packageneric__echo symbolic links
AC_PROG_LN_S
#packageneric__echo install
#AC_PROG_INSTALL
packageneric__echo default prefix: $(pwd)/++packageneric/install
AC_PREFIX_DEFAULT($(pwd)/++packageneric/install)
AC_CACHE_SAVE
PACKAGENERIC__INCLUDE(packageneric/generic/detail/autotools/autoconf/gnu-compiler-and-linker-flags.ac)
PACKAGENERIC__INCLUDE(packageneric/generic/detail/autotools/autoconf/microsoft.ac)
PACKAGENERIC__MODULE__EXTERNAL__PATH
PACKAGENERIC__MODULE__INTERNAL__LIST__BEGIN
PACKAGENERIC__INCLUDE(packageneric/+autogenerated/autotools/autoconf/package/modules.ac)
PACKAGENERIC__MODULE__INTERNAL__LIST__END
AC_CACHE_SAVE
PACKAGENERIC__INCLUDE(packageneric/generic/detail/autotools/autoconf/defines.ac)
PACKAGENERIC__INCLUDE(packageneric/+autogenerated/autotools/autoconf/CONFIG_FILES.ac)
AC_CONFIG_HEADERS(packageneric/+autogenerated/autotools/autoheader.private.hpp)
PACKAGENERIC__INCLUDE(packageneric/+autogenerated/autotools/autoconf/CONFIG_HEADERS.ac)
PACKAGENERIC__INCLUDE(packageneric/+autogenerated/autotools/autoconf/src/[PACKAGENERIC__CONFIGURATION__HEADER_WITH_NAMESPACE].ac)
PACKAGENERIC__INCLUDE(packageneric/+autogenerated/autotools/autoconf/package/nested/CONFIG_SUBDIRS.ac)
AC_OUTPUT
